# Homework1

./: Cargo.toml  customSpec.json  customSpecRaw.json  raw.json
data/node01/chains/kit/db/full/: 000039.sst  000041.sst  000042.sst  000043.sst  000062.sst  000063.sst  000064.sst  000069.sst  000070.sst  000071.sst  IDENTITY  LOG  MANIFEST-000065
data/node01/chains/kit/network/: secret_ed25519
data/node02/chains/kit/db/full/: 000037.sst  000038.sst  000039.sst  000040.sst  000041.sst  000042.sst  000043.sst  IDENTITY  LOG  MANIFEST-000044
data/node02/chains/kit/network/: secret_ed25519
js-test/: kitties.js  template.js
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  keys.md  rpc.rs
pallets/kitties/: Cargo.toml
pallets/kitties/rpc/: Cargo.toml
pallets/kitties/rpc/runtime-api/: Cargo.toml
pallets/kitties/rpc/runtime-api/src/: lib.rs
pallets/kitties/rpc/src/: lib.rs
pallets/kitties/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/loosely-coupling/: Cargo.toml
pallets/loosely-coupling/src/: lib.rs
pallets/marketplace/: Cargo.toml
pallets/marketplace/src/: lib.rs
pallets/nfts/: Cargo.toml
pallets/nfts/src/: lib.rs
pallets/template/rpc/: Cargo.toml
pallets/template/rpc/runtime-api/: Cargo.toml
pallets/template/rpc/runtime-api/src/: lib.rs
pallets/template/rpc/src/: lib.rs
pallets/template/src/: lib.rs  weights.rs
pallets/tightly-coupling/: Cargo.toml
pallets/tightly-coupling/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/key/: aura1  aura2  gran1  gran2  run.sh
